--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -66,12 +66,31 @@
         .icons{
             display: flex;
             gap: 20px;
+            .details{
+                z-index: 999;
+            }
 
             img{
                 width: 20px;
                 height: 20px;
             }
+
+            .closeButton{
+                z-index: 999;
+                background: none;
+                border: none;
+                cursor: pointer;
+                font-size: 1.5rem;
+                color: white; /* Couleur du texte de la croix */
+                padding: 1rem;
+              
+            }
         }
+
+    }
+
+    .backButton {
+        display: none;
     }
 
     .center{
@@ -189,8 +208,76 @@
                 cursor: not-allowed;
             }
         }
+
+        .send{
+            display: flex;
+            padding: 20px;
+            align-items: center;
+            gap: 20px;
+            margin-top: auto;
+        }
     }
 }
+
+@media screen and (max-width: 1024px) {
+    /* Styles pour les tablettes et iPad Air en mode paysage */
+    .chat {
+        max-width: 100%; /* Limiter la largeur si nécessaire */
+        overflow: auto; /* Activer le défilement horizontal si nécessaire */
+      }
+}
+
+@media screen and (max-width: 768px) {
+  
+    .chat{
+        .bottom{
+            flex-direction: column;
+            border-bottom: 1px solid #dddddd35;
+
+            .send{
+                gap: 5px;
+                padding: 0;
+            }
+
+            input{
+                padding: 10px;
+            }
+
+            .sendButton{
+                padding: 10px 15px;
+            }
+        }
+
+        .backButton{
+            display: inline-block;
+            width: 100%;
+            margin-bottom: 20px;
+            padding: 10px 0;
+            background-color: transparent;
+            color: #ff8c00; 
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+            text-align: center;
+            text-decoration: none;
+            transition: color 0.3s;
+
+            &:hover {
+                color: #e67600; 
+            }
+
+            &:active {
+                color: #cc6600; 
+            } 
+        }
+    }
+    
+}
+
+
+
+
 
 /*personnalisation de ma schrollBar*/
 /* Pour WebKit (Chrome, Safari, Edge) */
