--- a/src/components/detail/detail.css
+++ b/src/components/detail/detail.css
@@ -28,13 +28,12 @@
     
 
     .info{
-        padding: 20px;
         display: flex;
         flex-direction: column;
         gap: 25px;
 
         .option{
-            width: 70%;
+            width: 50%;
             margin: auto;
 
             .title{
@@ -100,6 +99,10 @@
                         padding: 10px;
                         border-radius: 50%;
                         cursor: pointer;
+                    }
+
+                    .file-icon {
+                        font-size: 1.5rem; 
                     }
 
                 }
